made first page

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>nodejs</title>
-    <style>
-        body{background-color: beige; text-align: center}
-        h1{color: red; text-align: center; font-size: 28px; font-family: Verdana; padding: 10px; margin: 10px;}
-        p{text-align: center; font-size: 14px; font-family: Verdana; padding: 10px; margin: 10px;}
-    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/core.js"></script>
+    <link href="/assets/styles.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-<h1>OPPSSS 404 </h1>
-<p>
-    sorry the page is not found!
-    
-</p>
+    <div id="todo-table">
+        <form>
+            <input type="text" name="item" placeholder="add a name" required>
+            <button type="submit">add item</button>
+        </form>
+        <ul>
+            <li>Item one</li>
+            <li>Item two</li>
+            <li>Item three</li>
+        </ul>
+    </div>
 </body>
 </html>
